<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.UserDetailActiivty">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_18sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parth"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivBack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivBack" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivUserImage"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/_2sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUserName"
            app:shapeAppearance="@style/User.Rounded"
            app:strokeColor="@color/primary"
            app:strokeWidth="@dimen/_2sdp" />

        <TextView
            android:id="@+id/txtGitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:ellipsize="end"
            android:maxWidth="@dimen/_250sdp"
            android:singleLine="true"
            android:text="@string/git"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
            app:layout_constraintTop_toBottomOf="@+id/txtGitName" />

        <TextView
            android:id="@+id/txtFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintLeft_toLeftOf="@+id/tvFollowers"
            app:layout_constraintRight_toRightOf="@+id/tvFollowers"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/followings"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintLeft_toRightOf="@+id/tvFollowers"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGitName" />

        <TextView
            android:id="@+id/txtFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintLeft_toLeftOf="@+id/tvFollowing"
            app:layout_constraintRight_toRightOf="@+id/tvFollowing"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/txtFollowers"
            app:tabTextColor="@android:color/background_light">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFollowers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFollowing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/followings" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFollowersList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            tools:listitem="@layout/userlist_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFollowingList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            tools:listitem="@layout/userlist_item" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>